--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -32,15 +32,15 @@ kotlin{
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "androidx.appcompat:appcompat:$support_version"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
 
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.google.android.material:material:$support_version"
+    implementation "androidx.cardview:cardview:$support_version"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "me.angrybyte.picker:picker:1.3.1"
@@ -51,11 +51,11 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     //Lifecycle component dependencies
-    implementation "android.arch.lifecycle:extensions:$arch_component_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$arch_component_version"
-    implementation "android.arch.lifecycle:viewmodel:$arch_component_version"
-    implementation "android.arch.persistence.room:runtime:$arch_component_version"
-    kapt "android.arch.persistence.room:compiler:$arch_component_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$arch_component_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$arch_component_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$arch_component_version"
+    implementation "androidx.room:room-runtime:$arch_component_version"
+    kapt "androidx.room:room-compiler:$arch_component_version"
 
 
 
