--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.71'
-    ext.support_version = '28.0.0'
-    ext.arch_component_version = '1.1.1'
+    ext.support_version = '1.0.0-beta01'
+    ext.arch_component_version = '2.0.0-beta01'
     ext.retrofit_version = '2.5.0'
      ext.glide_version = '4.9.0'
     ext.coroutines = '0.26.1'
